# autoprolab

./: APTLABS_TEST_REPORT.md  README.md  RENOVATION_SUMMARY.md  aptlabs_agent_config.py  execute_flag_capture.py  pyproject.toml  run_exploitation.py  run_recon_test.py  run_vuln_analysis.py  setup_mcp_servers.py  simple_operation_launcher.py  start_aptlabs_operation.py  test_agent_deployment.py  test_agents.py  test_aptlabs_system.py  test_htb_api.py  test_parallel_execution.py  test_red_teaming.py
agents/: __init__.py  aptlabs_operation.py  autonomous_redteam_agent.py  base_agent.py  htb_aptlabs_agent.py  initial_access_agent.py  main.py  mcp_server_manager.py  network_scanner_agent.py  parallel_utils.py  recon_agent.py  team_leader_agent.py  tool_selector_agent.py  web_hacking_agent.py  zep_integration.py
client/src/: index.css
client/src/components/: ad-visualization.tsx  agent-modal.tsx  network-topology.tsx  pro-lab-selection.tsx  sidebar.tsx  target-modal.tsx  team-hierarchy.tsx
client/src/components/layout/: header.tsx  status-bar.tsx
client/src/lib/: utils.ts
client/src/pages/: dashboard-new.tsx  dashboard.tsx
server/: htb-integration.ts  routes.ts  seed.ts  storage.ts
shared/: schema.ts
