[tool.poetry]
name = "autoprolab"
version = "0.1.0"
description = "Autonomous Penetration Testing Lab with AI Agents"
authors = ["RedTeam Command Center <team@redteam.local>"]
readme = "README.md"
packages = [{include = "agents"}]

[tool.poetry.dependencies]
python = "^3.11"
agno = "^1.5.0"
zep-cloud = "^2.0.0"
requests = "^2.31.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
asyncio = "^3.4.3"
aiohttp = "^3.9.0"
openai = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
autoprolab = "agents.main:main"
